snapwebsites (1.5.23.1~xenial) xenial; urgency=high

  * Nightly build.

 -- Build Server <build@m2osw.com>  Tue, 15 Aug 2017 02:00:45 -0700

snapwebsites (1.5.23.0~xenial) xenial; urgency=high

  * EX-191: Breadcrumb label may include HTML tags.

 -- Alexis Wilke <alexis@m2osw.com>  Mon, 14 Aug 2017 21:57:11 -0700

snapwebsites (1.5.22.0~xenial) xenial; urgency=high

  * SNAP-591: Existing links may need to be deleted before we create new ones.
  * Added a couple of tests to verify that this is done properly for unique
    links (we want to check the same with multiple links too at some point).

 -- Alexis Wilke <alexis@m2osw.com>  Mon, 14 Aug 2017 21:57:06 -0700

snapwebsites (1.5.21.0~xenial) xenial; urgency=high

  * Noticed a warning from the filter and applied a fix (i.e. do not filter
    attributes of <xsl:...> tags because they include '[...]' specific to XSLT.

 -- Alexis Wilke <alexis@m2osw.com>  Sun, 13 Aug 2017 20:26:53 -0700

snapwebsites (1.5.20.0~xenial) xenial; urgency=high

  * EX-193: Added Reply-To header support.

 -- Doug Barbieri <doug@garibaldi>  Thu, 10 Aug 2017 09:04:52 -0700

snapwebsites (1.5.18.0~xenial) xenial; urgency=high

  * Fixed the help of the "snapclearcache".

 -- Alexis Wilke <alexis@m2osw.com>  Wed, 03 Aug 2017 20:31:45 -0700

snapwebsites (1.5.17.0~xenial) xenial; urgency=high

  * Made the clear-cache.sh script a command line utility: "snapclearcache".

 -- Alexis Wilke <alexis@m2osw.com>  Wed, 02 Aug 2017 14:22:40 -0700

snapwebsites (1.5.16.0~xenial) xenial; urgency=high

  * The fix to the root user permissions actually exposed another bug: the
    updating of the cache could end up using an empty version of the list
    of permissions when we shortcut the calculation of the permissions to
    know whether the user is allowed (i.e. the default list is the empty
    list and we would save that even if we did not call the function used
    to generate the list of permissions of a page.)
